# kwaras

./: .gitattributes  .gitignore  .project  .pydevproject  MIT-LICENSE  README.md  ROADMAP.md  __init__.py  build.ps1  build.sh  check-install.py  comm.py  config.txt  convert-lexicon.BAT  convert-lexicon.COMMAND  export-corpus.BAT  export-corpus.COMMAND  export-lexicon.COMMAND  gui.py  gui.spec  install-macos.COMMAND  kwaras.spec  lexicon.cfg  lexicon.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml
formats/: eaf.py  lift.py  liftadd.py  utfcsv.py
kwaras/: __init__.py  app.py  cli.py
kwaras/conf/: __init__.py  config.py  rar_win.py
kwaras/formats/: eaf.py  lift.py  textgrid.py  utfcsv.py  xlsx.py
kwaras/langs/: Gitonga.py  Kumiai.py  Mixtec.py  Other.py  Raramuri.py
kwaras/process/: liftadd.py  reparse.py  timealign.py  web.py
langs/: Gitonga.py  Mixtec.py  Raramuri.py
process/: reparse.py  timealign.py  web.py
src/conf/: config.py  git_mac.py  min_mac.py  rar_win.py
src/formats/: eaf.py  lift.py  textgrid.py  utfcsv.py  xlsx.py
src/langs/: Gitonga.py  Kumiai.py  Mixtec.py  Other.py  Raramuri.py
src/process/: liftadd.py  reparse.py  timealign.py  web.py
tests/: __init__.py  conftest.py  test_build.py  test_cli.py  test_package.py
web/: index_wrapper.html
web/css/: ColVis.css  demo_page.css  demo_table_jui.css  fm.css
web/css/smoothness/: jquery-ui-1.8.18.custom.css
web/js/: jquery.media.js  jquery.metadata.js
