[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kwaras"]


[project]
name = "kwaras"
authors = [
    {name = "Lucien Carroll", email = "lucien@discurs.us"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.2.0"

[project.scripts]
kwaras = "kwaras.app:main"